// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DocumentSettings should render correctly 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px; transform-origin: NaNpx NaNpx;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                Document Settings
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash"
              >
                <div>
                  DummyEngraveDpiSlider
                  <p>
                    value: 
                    medium
                  </p>
                  <button
                    type="button"
                  >
                    change dpi
                  </button>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-col ant-col-6 ant-form-item-label css-dev-only-do-not-override-hash"
                    >
                      <label
                        class=""
                        for="workarea"
                        title="Working Area"
                      >
                        Working Area
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-select ant-select-in-form-item css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="workarea_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-label="Search"
                                  aria-owns="workarea_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="workarea"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="Ador"
                              >
                                Ador
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <strong>
                  Add-ons
                </strong>
                <div
                  class="modules"
                >
                  <div
                    class="row full"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="rotary_mode"
                      >
                        Rotary
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch switch css-dev-only-do-not-override-hash"
                        id="rotary_mode"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="row full"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="pass_through"
                      >
                        Pass Through
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch switch css-dev-only-do-not-override-hash"
                        id="pass_through"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  Save
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test DocumentSettings should render correctly 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px; transform-origin: NaNpx NaNpx;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                Document Settings
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash"
              >
                <div>
                  DummyEngraveDpiSlider
                  <p>
                    value: 
                    high
                  </p>
                  <button
                    type="button"
                  >
                    change dpi
                  </button>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-col ant-col-6 ant-form-item-label css-dev-only-do-not-override-hash"
                    >
                      <label
                        class=""
                        for="workarea"
                        title="Working Area"
                      >
                        Working Area
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-select ant-select-in-form-item css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="workarea_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-label="Search"
                                  aria-owns="workarea_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="workarea"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="Ador"
                              >
                                Ador
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <strong>
                  Add-ons
                </strong>
                <div
                  class="modules"
                >
                  <div
                    class="row full"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="rotary_mode"
                      >
                        Rotary
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch switch css-dev-only-do-not-override-hash"
                        id="rotary_mode"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="row full"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="pass_through"
                      >
                        Pass Through
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch switch css-dev-only-do-not-override-hash"
                        id="pass_through"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  Save
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test DocumentSettings should render correctly 3`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px; transform-origin: NaNpx NaNpx;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                Document Settings
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash"
              >
                <div>
                  DummyEngraveDpiSlider
                  <p>
                    value: 
                    high
                  </p>
                  <button
                    type="button"
                  >
                    change dpi
                  </button>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-col ant-col-6 ant-form-item-label css-dev-only-do-not-override-hash"
                    >
                      <label
                        class=""
                        for="workarea"
                        title="Working Area"
                      >
                        Working Area
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-select ant-select-in-form-item ant-select-status-success css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="workarea_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-label="Search"
                                  aria-owns="workarea_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="workarea"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="beamo"
                              >
                                beamo
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <strong>
                  Add-ons
                </strong>
                <div
                  class="modules"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="rotary_mode"
                      >
                        Rotary
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch switch css-dev-only-do-not-override-hash"
                        id="rotary_mode"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="row"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="autofocus-module"
                      >
                        Autofocus
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="true"
                        class="ant-switch switch css-dev-only-do-not-override-hash ant-switch-checked"
                        id="autofocus-module"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="row"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="borderless_mode"
                      >
                        Open Bottom
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="true"
                        class="ant-switch switch css-dev-only-do-not-override-hash ant-switch-checked"
                        id="borderless_mode"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="row"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="diode_module"
                      >
                        Diode Laser
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="true"
                        class="ant-switch switch css-dev-only-do-not-override-hash ant-switch-checked"
                        id="diode_module"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="row full"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="pass_through"
                      >
                        Pass Through
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="true"
                        class="ant-switch switch css-dev-only-do-not-override-hash ant-switch-checked"
                        id="pass_through"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                      <div
                        class="input"
                      >
                        <div
                          class="ant-input-number-group-wrapper input css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-input-number-wrapper ant-input-number-group css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-input-number css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-input-number-handler-wrap"
                              >
                                <span
                                  aria-disabled="false"
                                  aria-label="Increase Value"
                                  class="ant-input-number-handler ant-input-number-handler-up"
                                  role="button"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="up"
                                    class="anticon anticon-up ant-input-number-handler-up-inner"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="up"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <span
                                  aria-disabled="false"
                                  aria-label="Decrease Value"
                                  class="ant-input-number-handler ant-input-number-handler-down"
                                  role="button"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-input-number-handler-down-inner"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                              <div
                                class="ant-input-number-input-wrap"
                              >
                                <input
                                  aria-valuemin="210"
                                  aria-valuenow="500"
                                  autocomplete="off"
                                  class="ant-input-number-input"
                                  id="pass_through_height"
                                  role="spinbutton"
                                  step="1"
                                  value="500"
                                />
                              </div>
                            </div>
                            <div
                              class="ant-input-number-group-addon"
                            >
                              mm
                            </div>
                          </div>
                        </div>
                      </div>
                      <span
                        aria-label="question-circle"
                        class="anticon anticon-question-circle hint"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="question-circle"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                          />
                          <path
                            d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  Save
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-hash ant-select-dropdown-placement-bottomLeft"
      style="left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div>
        <div
          id="workarea_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="beamo"
            aria-selected="true"
            id="workarea_list_0"
            role="option"
          >
            fbm1
          </div>
          <div
            aria-label="Beambox"
            aria-selected="false"
            id="workarea_list_1"
            role="option"
          >
            fbb1b
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                  title="beamo"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    beamo
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox Pro"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox Pro
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="HEXA"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    HEXA
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Ador"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Ador
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox II"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox II
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test DocumentSettings should render correctly for ador 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                Document Settings
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash"
              >
                <div>
                  DummyEngraveDpiSlider
                  <p>
                    value: 
                    medium
                  </p>
                  <button
                    type="button"
                  >
                    change dpi
                  </button>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-col ant-col-6 ant-form-item-label css-dev-only-do-not-override-hash"
                    >
                      <label
                        class=""
                        for="workarea"
                        title="Working Area"
                      >
                        Working Area
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-select ant-select-in-form-item css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="workarea_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-label="Search"
                                  aria-owns="workarea_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="workarea"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="Ador"
                              >
                                Ador
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <strong>
                  Add-ons
                </strong>
                <div
                  class="modules"
                >
                  <div
                    class="row full"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="rotary_mode"
                      >
                        Rotary
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch switch css-dev-only-do-not-override-hash"
                        id="rotary_mode"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="row full"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="pass_through"
                      >
                        Pass Through
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch switch css-dev-only-do-not-override-hash"
                        id="pass_through"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  Save
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-hash ant-select-dropdown-placement-bottomLeft"
      style="left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div>
        <div
          id="workarea_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="beamo"
            aria-selected="false"
            id="workarea_list_0"
            role="option"
          >
            fbm1
          </div>
          <div
            aria-label="Beambox"
            aria-selected="false"
            id="workarea_list_1"
            role="option"
          >
            fbb1b
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active"
                  title="beamo"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    beamo
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox Pro"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox Pro
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="HEXA"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    HEXA
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-selected"
                  title="Ador"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Ador
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox II"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox II
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test DocumentSettings should render correctly for ador 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                Document Settings
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash"
              >
                <div>
                  DummyEngraveDpiSlider
                  <p>
                    value: 
                    medium
                  </p>
                  <button
                    type="button"
                  >
                    change dpi
                  </button>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-col ant-col-6 ant-form-item-label css-dev-only-do-not-override-hash"
                    >
                      <label
                        class=""
                        for="workarea"
                        title="Working Area"
                      >
                        Working Area
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-select ant-select-in-form-item css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="workarea_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-label="Search"
                                  aria-owns="workarea_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="workarea"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="Ador"
                              >
                                Ador
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <strong>
                  Add-ons
                </strong>
                <div
                  class="modules"
                >
                  <div
                    class="row full"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="rotary_mode"
                      >
                        Rotary
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="true"
                        class="ant-switch switch css-dev-only-do-not-override-hash ant-switch-checked"
                        id="rotary_mode"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                      <div
                        class="subCheckbox"
                      >
                        <label
                          class="ant-checkbox-wrapper css-dev-only-do-not-override-hash"
                        >
                          <span
                            class="ant-checkbox ant-wave-target css-dev-only-do-not-override-hash"
                          >
                            <input
                              class="ant-checkbox-input"
                              type="checkbox"
                            />
                            <span
                              class="ant-checkbox-inner"
                            />
                          </span>
                          <span>
                            extend_workarea
                          </span>
                        </label>
                        <label
                          class="ant-checkbox-wrapper css-dev-only-do-not-override-hash"
                        >
                          <span
                            class="ant-checkbox ant-wave-target css-dev-only-do-not-override-hash"
                          >
                            <input
                              class="ant-checkbox-input"
                              type="checkbox"
                            />
                            <span
                              class="ant-checkbox-inner"
                            />
                          </span>
                          <span>
                            mirror
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="row full"
                  >
                    <div
                      class="title"
                    >
                      <label
                        for="pass_through"
                      >
                        Pass Through
                      </label>
                    </div>
                    <div
                      class="control"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch switch css-dev-only-do-not-override-hash"
                        id="pass_through"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  Save
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-hash ant-select-dropdown-placement-bottomLeft"
      style="left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div>
        <div
          id="workarea_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="beamo"
            aria-selected="false"
            id="workarea_list_0"
            role="option"
          >
            fbm1
          </div>
          <div
            aria-label="Beambox"
            aria-selected="false"
            id="workarea_list_1"
            role="option"
          >
            fbb1b
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active"
                  title="beamo"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    beamo
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox Pro"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox Pro
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="HEXA"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    HEXA
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-selected"
                  title="Ador"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Ador
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox II"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox II
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
